// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie component should expand movie 1`] = `
<Movie
  conf={
    Object {
      "change_keys": Array [
        "adult",
        "air_date",
        "also_known_as",
        "alternative_titles",
        "biography",
        "birthday",
        "budget",
        "cast",
        "certifications",
        "character_names",
        "created_by",
        "crew",
        "deathday",
        "episode",
        "episode_number",
        "episode_run_time",
        "freebase_id",
        "freebase_mid",
        "general",
        "genres",
        "guest_stars",
        "homepage",
        "images",
        "imdb_id",
        "languages",
        "name",
        "network",
        "origin_country",
        "original_name",
        "original_title",
        "overview",
        "parts",
        "place_of_birth",
        "plot_keywords",
        "production_code",
        "production_companies",
        "production_countries",
        "releases",
        "revenue",
        "runtime",
        "season",
        "season_number",
        "season_regular",
        "spoken_languages",
        "status",
        "tagline",
        "title",
        "translations",
        "tvdb_id",
        "tvrage_id",
        "type",
        "video",
        "videos",
      ],
      "images": Object {
        "backdrop_sizes": Array [
          "w300",
          "w780",
          "w1280",
          "original",
        ],
        "base_url": "http://image.tmdb.org/t/p/",
        "logo_sizes": Array [
          "w45",
          "w92",
          "w154",
          "w185",
          "w300",
          "w500",
          "original",
        ],
        "poster_sizes": Array [
          "w92",
          "w154",
          "w185",
          "w342",
          "w500",
          "w780",
          "original",
        ],
        "profile_sizes": Array [
          "w45",
          "w185",
          "h632",
          "original",
        ],
        "secure_base_url": "https://image.tmdb.org/t/p/",
        "still_sizes": Array [
          "w92",
          "w185",
          "w300",
          "original",
        ],
      },
    }
  }
  index={1}
  movie={
    Object {
      "adult": false,
      "backdrop_path": "/tcheoA2nPATCm2vvXw2hVQoaEFD.jpg",
      "genre_ids": Array [
        12,
        18,
        27,
        885555,
      ],
      "genre_names": Array [
        "Thriller",
        "Horror",
        "Drama",
      ],
      "id": 346364,
      "isExpanded": true,
      "original_language": "en",
      "original_title": "It",
      "overview": "In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise.",
      "popularity": 741.821925,
      "poster_path": "/9E2y5Q7WlCVNEhP5GiVTjhEhx1o.jpg",
      "release_date": "2017-09-05",
      "title": "It",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 2793,
    }
  }
>
  <div
    className="movie expanded"
    data-index={1}
    onClick={[Function]}
    style={
      Object {
        "order": -1,
      }
    }
  >
    <div
      className="movie-box"
      style={
        Object {
          "backgroundImage": "url(http://image.tmdb.org/t/p/w780/tcheoA2nPATCm2vvXw2hVQoaEFD.jpg)",
        }
      }
    >
      <div
        className="tint"
      />
      <div
        className="movie-score"
      >
        7.4
      </div>
      <h3
        className="movie-title"
      >
        It
         (
        2017
        )
      </h3>
      <p
        className="movie-genres"
      >
        Thriller, Horror, Drama
      </p>
      <p
        className="movie-overview"
      >
        In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise.
      </p>
    </div>
  </div>
</Movie>
`;

exports[`Movie component should have correct initial values 1`] = `
<Movie
  conf={
    Object {
      "change_keys": Array [
        "adult",
        "air_date",
        "also_known_as",
        "alternative_titles",
        "biography",
        "birthday",
        "budget",
        "cast",
        "certifications",
        "character_names",
        "created_by",
        "crew",
        "deathday",
        "episode",
        "episode_number",
        "episode_run_time",
        "freebase_id",
        "freebase_mid",
        "general",
        "genres",
        "guest_stars",
        "homepage",
        "images",
        "imdb_id",
        "languages",
        "name",
        "network",
        "origin_country",
        "original_name",
        "original_title",
        "overview",
        "parts",
        "place_of_birth",
        "plot_keywords",
        "production_code",
        "production_companies",
        "production_countries",
        "releases",
        "revenue",
        "runtime",
        "season",
        "season_number",
        "season_regular",
        "spoken_languages",
        "status",
        "tagline",
        "title",
        "translations",
        "tvdb_id",
        "tvrage_id",
        "type",
        "video",
        "videos",
      ],
      "images": Object {
        "backdrop_sizes": Array [
          "w300",
          "w780",
          "w1280",
          "original",
        ],
        "base_url": "http://image.tmdb.org/t/p/",
        "logo_sizes": Array [
          "w45",
          "w92",
          "w154",
          "w185",
          "w300",
          "w500",
          "original",
        ],
        "poster_sizes": Array [
          "w92",
          "w154",
          "w185",
          "w342",
          "w500",
          "w780",
          "original",
        ],
        "profile_sizes": Array [
          "w45",
          "w185",
          "h632",
          "original",
        ],
        "secure_base_url": "https://image.tmdb.org/t/p/",
        "still_sizes": Array [
          "w92",
          "w185",
          "w300",
          "original",
        ],
      },
    }
  }
  index={0}
  movie={
    Object {
      "adult": false,
      "backdrop_path": "/tcheoA2nPATCm2vvXw2hVQoaEFD.jpg",
      "genre_ids": Array [
        12,
        18,
        27,
        885555,
      ],
      "genre_names": Array [
        "Thriller",
        "Horror",
        "Drama",
      ],
      "id": 346364,
      "original_language": "en",
      "original_title": "It",
      "overview": "In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise.",
      "popularity": 741.821925,
      "poster_path": "/9E2y5Q7WlCVNEhP5GiVTjhEhx1o.jpg",
      "release_date": "2017-09-05",
      "title": "It",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 2793,
    }
  }
>
  <div
    className="movie "
    data-index={0}
    onClick={[Function]}
    style={
      Object {
        "order": 0,
      }
    }
  >
    <div
      className="movie-box"
      style={
        Object {
          "backgroundImage": "url(http://image.tmdb.org/t/p/w780/tcheoA2nPATCm2vvXw2hVQoaEFD.jpg)",
        }
      }
    >
      <div
        className="tint"
      />
      <div
        className="movie-score"
      >
        7.4
      </div>
      <h3
        className="movie-title"
      >
        It
         (
        2017
        )
      </h3>
      <p
        className="movie-genres"
      >
        Thriller, Horror, Drama
      </p>
      <p
        className="movie-overview"
      >
        In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise.
      </p>
    </div>
  </div>
</Movie>
`;

exports[`Movie component should have correct initial values 2`] = `
<Movie
  conf={
    Object {
      "change_keys": Array [
        "adult",
        "air_date",
        "also_known_as",
        "alternative_titles",
        "biography",
        "birthday",
        "budget",
        "cast",
        "certifications",
        "character_names",
        "created_by",
        "crew",
        "deathday",
        "episode",
        "episode_number",
        "episode_run_time",
        "freebase_id",
        "freebase_mid",
        "general",
        "genres",
        "guest_stars",
        "homepage",
        "images",
        "imdb_id",
        "languages",
        "name",
        "network",
        "origin_country",
        "original_name",
        "original_title",
        "overview",
        "parts",
        "place_of_birth",
        "plot_keywords",
        "production_code",
        "production_companies",
        "production_countries",
        "releases",
        "revenue",
        "runtime",
        "season",
        "season_number",
        "season_regular",
        "spoken_languages",
        "status",
        "tagline",
        "title",
        "translations",
        "tvdb_id",
        "tvrage_id",
        "type",
        "video",
        "videos",
      ],
      "images": Object {
        "backdrop_sizes": Array [
          "w300",
          "w780",
          "w1280",
          "original",
        ],
        "base_url": "http://image.tmdb.org/t/p/",
        "logo_sizes": Array [
          "w45",
          "w92",
          "w154",
          "w185",
          "w300",
          "w500",
          "original",
        ],
        "poster_sizes": Array [
          "w92",
          "w154",
          "w185",
          "w342",
          "w500",
          "w780",
          "original",
        ],
        "profile_sizes": Array [
          "w45",
          "w185",
          "h632",
          "original",
        ],
        "secure_base_url": "https://image.tmdb.org/t/p/",
        "still_sizes": Array [
          "w92",
          "w185",
          "w300",
          "original",
        ],
      },
    }
  }
  index={1}
  movie={
    Object {
      "adult": false,
      "backdrop_path": null,
      "genre_ids": Array [
        12,
        18,
        27,
        885555,
      ],
      "genre_names": Array [
        "Thriller",
        "Horror",
        "Drama",
      ],
      "id": 2222,
      "original_language": "en",
      "original_title": "It",
      "overview": "In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise.",
      "popularity": 741.821925,
      "poster_path": "/9E2y5Q7WlCVNEhP5GiVTjhEhx1o.jpg",
      "release_date": "2017-09-05",
      "title": "It",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 2793,
    }
  }
>
  <div
    className="movie "
    data-index={1}
    onClick={[Function]}
    style={
      Object {
        "order": 1,
      }
    }
  >
    <div
      className="movie-box"
      style={
        Object {
          "backgroundImage": "url(/movie-default.jpg)",
        }
      }
    >
      <div
        className="tint"
      />
      <div
        className="movie-score"
      >
        7.4
      </div>
      <h3
        className="movie-title"
      >
        It
         (
        2017
        )
      </h3>
      <p
        className="movie-genres"
      >
        Thriller, Horror, Drama
      </p>
      <p
        className="movie-overview"
      >
        In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise.
      </p>
    </div>
  </div>
</Movie>
`;
